[gd_scene load_steps=7 format=3 uid="uid://dgu3lgen43e1b"]

[ext_resource type="Script" uid="uid://dlgqsnjrv1mp1" path="res://scripts/bedroom/clock.gd" id="1_y58p0"]
[ext_resource type="Shader" uid="uid://co5gqgupj2yu7" path="res://shaders/level_1_painting.gdshader" id="2_eptq3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ha73p"]
shader = ExtResource("2_eptq3")
shader_parameter/line_color = Color(1, 0.34509805, 0, 1)
shader_parameter/line_thickness = 1.322000062795

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_vcx5n"]
load_path = "res://.godot/imported/fancy_mansion_furnitureset.png-d23b050a7caff2f4379cc297a38e3e1a.ctex"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ha73p"]
size = Vector2(23.75, 74.5)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_6omhm"]
load_path = "res://.godot/imported/text-box.png-81613166858c95bc029821cb60ff3c73.ctex"

[node name="Clock" type="Node2D"]
z_index = 50
script = ExtResource("1_y58p0")

[node name="ClockSprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_ha73p")
position = Vector2(47, -35)
texture = SubResource("CompressedTexture2D_vcx5n")
region_enabled = true
region_rect = Rect2(4, 320.973, 24, 65)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(47.125, -27.25)
shape = SubResource("RectangleShape2D_ha73p")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
modulate = Color(0.20511743, 0.20511743, 0.20511743, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect2" type="NinePatchRect" parent="CanvasLayer"]
offset_left = 320.0
offset_top = 77.0
offset_right = 820.0
offset_bottom = 545.0
texture = SubResource("CompressedTexture2D_6omhm")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Label" type="Label" parent="CanvasLayer/NinePatchRect2"]
z_index = 5
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -171.5
offset_right = 248.0
offset_bottom = -70.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Change the time?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/NinePatchRect2"]
z_index = 20
layout_mode = 0
offset_left = 45.0
offset_top = 237.0
offset_right = 455.0
offset_bottom = 336.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
placeholder_text = "Enter the time"
alignment = 1
max_length = 5

[node name="Label2" type="Label" parent="CanvasLayer/NinePatchRect2"]
z_index = 5
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -249.0
offset_top = -74.5
offset_right = 249.0
offset_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
text = "Enter in the format (HHMM)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer"]
z_index = 5
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -253.0
offset_top = 65.5
offset_right = 245.0
offset_bottom = 166.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
text = "Press ENTER to set it"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="Area2D" to="." method="_on_clock_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_clock_exited"]
